# ros2-turtlebot3-mapping

./: README.md  ros2_turtlebot3_mapping_demo.webm
assessment_ws/: map_1765254276.pgm  map_1765254276.yaml
assessment_ws/src/my_doosan_pkg/: package.xml  setup.py
assessment_ws/src/my_doosan_pkg/description/urdf/: m1013.white.urdf
assessment_ws/src/my_doosan_pkg/launch/: my_doosan_gazebo_controller.launch.py
assessment_ws/src/turtlebot3_doosan_integration/: CMakeLists.txt  package.xml
assessment_ws/src/turtlebot3_doosan_integration/launch/: bringup_mobile_manipulator.launch.py  spawn_mobile_manipulator.launch.py
assessment_ws/src/turtlebot3_doosan_integration/urdf/: turtlebot3_doosan.urdf
assessment_ws/src/turtlebot3_sim_bringup/: README.md  package.xml  setup.py
assessment_ws/src/turtlebot3_sim_bringup/config/: turtlebot3.rviz
assessment_ws/src/turtlebot3_sim_bringup/launch/: bringup.launch.py  gazebo.launch.py  rviz.launch.py
assessment_ws/src/turtlebot3_sim_bringup/resource/: turtlebot3_sim_bringup
assessment_ws/src/turtlebot3_sim_bringup/turtlebot3_sim_bringup/: __init__.py
